--- a/ventaTickets/Views/Shared/_Layout.cshtml
+++ b/ventaTickets/Views/Shared/_Layout.cshtml
@@ -20,13 +20,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Cartelera</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Shows" asp-action="Index">Shows</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Shows" asp-action="Index">ShowsCreados</a>
                         </li>
                     </ul>
                 </div>
