--- a/ventaTickets/Views/Shows/Details.cshtml
+++ b/ventaTickets/Views/Shows/Details.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.imagen)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.imagen)
+            <img src="@Html.DisplayFor(model => model.imagen)">
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.cantCampo)
@@ -81,5 +81,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.showId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="index2">Volver a la Cartelera</a>
 </div>
