--- a/ventaTickets/Views/Shows/Index.cshtml
+++ b/ventaTickets/Views/Shows/Index.cshtml
@@ -62,7 +62,7 @@
                 @Html.DisplayFor(modelItem => item.direccion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.imagen)
+                    <img src="@Html.DisplayFor(modelItem => item.imagen)">
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.cantCampo)
