--- a/ventaTickets/wwwroot/css/site.css
+++ b/ventaTickets/wwwroot/css/site.css
@@ -14,5 +14,35 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+}
+
+/*----------INDEX2----------*/
+
+.body-index2 {
+    background: linear-gradient(to right, #E5E5BE, #003973);
+    text-align: center;
+}
+
+.full-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.shows {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    display: flex;
+}
+
+.show {
+    width: 500px;
+    height: auto;
+    margin: 10px;
+}
+
+/*----------FOOTER----------*/
+.footer {
+    background-color: white;
 }
