--- a/ventaTickets/Views/Usuarios/Delete.cshtml
+++ b/ventaTickets/Views/Usuarios/Delete.cshtml
@@ -14,9 +14,10 @@
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.mail)
+            @Html.DisplayNameFor(model => model.nombre)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.mail)
+            @Html.DisplayFor(model => model.nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.dni)
@@ -25,16 +26,16 @@
             @Html.DisplayFor(model => model.dni)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.nombre)
+            @Html.DisplayNameFor(model => model.email)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.nombre)
+            @Html.DisplayFor(model => model.email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.contrasena)
+            @Html.DisplayNameFor(model => model.password)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.contrasena)
+            @Html.DisplayFor(model => model.password)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.administrador)
