--- a/ventaTickets/Views/Usuarios/Details.cshtml
+++ b/ventaTickets/Views/Usuarios/Details.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.mail)
+            @Html.DisplayNameFor(model => model.nombre)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.mail)
+            @Html.DisplayFor(model => model.nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.dni)
@@ -24,16 +24,16 @@
             @Html.DisplayFor(model => model.dni)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.nombre)
+            @Html.DisplayNameFor(model => model.email)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.nombre)
+            @Html.DisplayFor(model => model.email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.contrasena)
+            @Html.DisplayNameFor(model => model.password)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.contrasena)
+            @Html.DisplayFor(model => model.password)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.administrador)
