--- a/ventaTickets/Views/Entradas/Edit.cshtml
+++ b/ventaTickets/Views/Entradas/Edit.cshtml
@@ -20,9 +20,9 @@
                 <span asp-validation-for="numero" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="fecha" class="control-label"></label>
-                <input asp-for="fecha" class="form-control" />
-                <span asp-validation-for="fecha" class="text-danger"></span>
+                <label asp-for="Fecha" class="control-label"></label>
+                <input asp-for="Fecha" class="form-control" />
+                <span asp-validation-for="Fecha" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ubicacion" class="control-label"></label>
