--- a/ventaTickets/Views/Entradas/Index.cshtml
+++ b/ventaTickets/Views/Entradas/Index.cshtml
@@ -17,7 +17,7 @@
                 @Html.DisplayNameFor(model => model.numero)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.fecha)
+                @Html.DisplayNameFor(model => model.Fecha)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ubicacion)
@@ -38,7 +38,7 @@
                 @Html.DisplayFor(modelItem => item.numero)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.fecha)
+                @Html.DisplayFor(modelItem => item.Fecha)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ubicacion)
