--- a/ventaTickets/Views/Entradas/Delete.cshtml
+++ b/ventaTickets/Views/Entradas/Delete.cshtml
@@ -19,10 +19,10 @@
             @Html.DisplayFor(model => model.numero)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.fecha)
+            @Html.DisplayNameFor(model => model.Fecha)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.fecha)
+            @Html.DisplayFor(model => model.Fecha)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ubicacion)
