--- a/ventaTickets/Views/Shared/_Layout.cshtml
+++ b/ventaTickets/Views/Shared/_Layout.cshtml
@@ -35,20 +35,23 @@
                         @if (User.IsInRole("Usuario"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Details"  >Mi perfil</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Details">Mi perfil</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Entradas">Mis entradas</a>
                             </li>
                         }
 
                         @if (User.IsInRole("Administrador"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">ListaUsuarios</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Lista Usuarios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Create">IngresarUsuario</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Create">Ingresar Usuario</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Shows" asp-action="Create">IngresarShow</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Shows" asp-action="Create">Ingresar Show</a>
                             </li>
                         }
                         @*         @if (User.IsInRole("Administrador") || User.IsInRole("Usuario"))*@
