--- a/ventaTickets/Views/Usuarios/Delete.cshtml
+++ b/ventaTickets/Views/Usuarios/Delete.cshtml
@@ -13,7 +13,7 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.mail)
+            @Html.DisplayNameFor(model => model.email)
             @Html.DisplayNameFor(model => model.nombre)
         </dt>
         <dd class = "col-sm-10">
