asignacion entrada por id

--- a/ventaTickets/Views/Shows/Pago.cshtml
+++ b/ventaTickets/Views/Shows/Pago.cshtml
@@ -12,7 +12,7 @@
             @Html.DisplayFor(model => model.nombre)
         </dd>
 
-        <form class="row g-3">
+        <form action="/Pago/agregarEntradas/" class="row g-3">
             <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">Nombre y apellido</label>
                 <input type="email" class="form-control" id="inputEmail4">
