--- a/ventaTickets/Views/Shows/VistaCompra.cshtml
+++ b/ventaTickets/Views/Shows/VistaCompra.cshtml
@@ -42,25 +42,26 @@
             <img src="@Html.DisplayFor(model => model.imagen)">
         </dd>
 
-        <form action="/Shows/Pago/@Model.showId" method="post">
-            <select class="form-sector" aria-label="Default select example" required>
+       <form action="/Shows/Pago/" method="post">
+            <select name="sector" class="form-sector" aria-label="Default select example" required>
                 <option disabled selected value="">
                     Selecciona una opción
                 </option>
-                <option value="1">
+                <option value="Campo">
                     Campo - $@Model.precioCampo
                 </option>
-                <option value="2">
+                <option value="Platea Baja">
                     Platea Baja - $@Model.precioPlateaBaja
                 </option>
-                <option value="3">
+                <option value="Platea Alta">
                     Platea Alta - $@Model.precioPlateaAlta
                 </option>
             </select>
 
-            <input type="number" class="form-control" min="1" max="5" required>
-
+            <input name="cantidad"  type="number" class="form-control" min="1" max="5" required>
             <button type="submit" class="btn btn-success btn-lg">Confirmar compra</button>
+            <input type="hidden" name="id" value="@Model.showId"/>
+            
         </form>
     </dl>
 </div>
