--- a/ventaTickets/Views/Usuarios/Entradas.cshtml
+++ b/ventaTickets/Views/Usuarios/Entradas.cshtml
@@ -13,15 +13,18 @@
             <th>
                 @Html.DisplayNameFor(model => model.ubicacion)
             </th>
+            <th>
+                Detalles
+            </th>
         </tr>
     </thead>
     <tbody>
-        @if (Model != null) {
+        @if (Model.Count() != 0) {
             @foreach (var item in Model)
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.precio)
+                        $@Html.DisplayFor(modelItem => item.precio)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.sector)
@@ -29,12 +32,21 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.ubicacion)
                     </td>
+                    <td>
+                        <a href="/Shows/DetailsEntrada/@Html.DisplayFor(modelItem => item.showId)">Ver detalles</a>
+                    </td>
                 </tr>
             }
         } else {
             <tr>
                 <td>
                     <h3>No hay entradas</h3>
+                </td>
+                <td>
+                </td>
+                <td>
+                </td>
+                <td>
                 </td>
             </tr>
         }
