--- a/ventaTickets/Views/Usuarios/Details.cshtml
+++ b/ventaTickets/Views/Usuarios/Details.cshtml
@@ -32,6 +32,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @if (User.IsInRole("Administrador"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model?.Id">Edit |</a>
+        <a asp-action = "Index"> Back to List</a>
+    }
 </div>
