--- a/ventaTickets/Views/Shows/Index2.cshtml
+++ b/ventaTickets/Views/Shows/Index2.cshtml
@@ -14,8 +14,7 @@
         {
                 <input class="show" 
                        type="image" 
-                       src="@Html.DisplayFor(modelItem => item.imagen)" 
-                       onclick="location.href='@Url.Action("Details", "Shows", new { id = item.showId })'" />
+                       src="@Html.DisplayFor(modelItem => item.imagen)"onclick="location.href='@Url.Action("Details", "Shows", new { id = item.showId })'" />
         }
         </div>
     </div>   
