--- a/ventaTickets/Views/Acceso/Index.cshtml
+++ b/ventaTickets/Views/Acceso/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model Usuario
+﻿
+@model Usuario
 @{
     Layout = null;
 }
@@ -14,7 +15,7 @@
 <body>
     <div class="row mt-5">
         <div class="col-sm-4 offset-sm-4">
-            <form asp-controller="Acceso" asp-action="index" method="post">
+            <form asp-controller="Acceso" asp-action="Index" method="post">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email</label>
                     <input type="email" class="form-control" asp-for="email" />
@@ -24,7 +25,9 @@
                     <input type="password" class="form-control" asp-for="password" />
                 </div>
                 <button type="submit" class="btn btn-primary">Ingresar</button>
-                <p>Not a member? <a href="/Usuarios/Create">Registro</a></p>
+                <p>No tiene cuenta? <a href="/Usuarios/Create">Registro</a></p>
+               
+                <p>Olvido su pass? <a href="/Mails/enviarContrasenia">recuperar</a></p>
             </form>
         </div>
     </div>
