--- a/ventaTickets/Views/Shared/_Layout.cshtml
+++ b/ventaTickets/Views/Shared/_Layout.cshtml
@@ -45,13 +45,19 @@
                         @if (User.IsInRole("Administrador"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Lista Usuarios</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Create">Ingresar Usuario</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Shows" asp-action="Index">Shows</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Shows" asp-action="Create">Ingresar Show</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Create">Nuevo Usuario</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Shows" asp-action="Create">Nuevo Show</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Shows" asp-action="Index3">Registro de Ventas</a>
                             </li>
                         }
                         @if (User.Identity.IsAuthenticated)
@@ -62,6 +68,12 @@
                         }
 
                     </ul>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <p style="text-align:left" class="nav-item">
+                            <h3> @User.Identity.Name.ToString()</h3>
+                        </p>
+                    }
                 </div>
             </div>
         </nav>
