--- a/ventaTickets/Views/Shows/Details.cshtml
+++ b/ventaTickets/Views/Shows/Details.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div>
-    <h4>Show</h4>
+    <h1>Show</h1>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -26,27 +26,28 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.direccion)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.imagen)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.fecha)
         </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.fecha)
+        </dd>
         <dd class = "col-sm-10">
             <img src="@Html.DisplayFor(model => model.imagen)">
         </dd>
-
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.fecha)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.fecha)
-        </dd>
-        
-                        
-        <button type="button" class="btn btn-success btn-lg" onclick="location.href='@Url.Action("VistaCompra", "Shows", new { id = @Model.showId })'">Comprar</button>
-                        
-
-    </dl>
+    </dl>  
+    <div class="d-grid gap-2 col-6 mx-auto">
+        <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("VistaCompra", "Shows", new { id = @Model.showId })'">Comprar</button>
+    </div>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.showId">Edit</a> |
-    <a asp-action="index2">Volver a la Cartelera</a>
+    <ul>
+    </ul>
+
+      @if (User.IsInRole("Administrador"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model?.showId">Edit</a> 
+    }
+  
+    <a asp-action="index2">Volver</a>
 </div>
