--- a/ventaTickets/Views/Shows/Index.cshtml
+++ b/ventaTickets/Views/Shows/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Shows Publicados</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Publicar nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -61,9 +61,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.direccion)
             </td>
-            <td>
+@*            <td>
                     <img src="@Html.DisplayFor(modelItem => item.imagen)">
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.cantCampo)
             </td>
@@ -86,8 +86,8 @@
                 @Html.DisplayFor(modelItem => item.fecha)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.showId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.showId">Details</a> |
+                <a asp-action="Edit" asp-route-id="@item.showId">Edit</a> 
+                <a asp-action="Details" asp-route-id="@item.showId">Details</a>
                 <a asp-action="Delete" asp-route-id="@item.showId">Delete</a>
             </td>
         </tr>
