--- a/ventaTickets/Views/Shows/NoHayEntradas.cshtml
+++ b/ventaTickets/Views/Shows/NoHayEntradas.cshtml
@@ -1,7 +1,5 @@
-﻿
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿<body style="background: #314755;background: -webkit-linear-gradient(to left, #26a0da, #314755);background: linear-gradient(to left, #26a0da, #314755);">
 
-<h1>No hay entradas para el show</h1>
-<a asp-action="index2">Volver a la Cartelera</a>
+<h1>Cantidad no disponible</h1>
+<a asp-controller="Home" asp-action="Index">Volver a la Cartelera</a>
+</body>
